tests/rosetta/out/Zig/bitmap-midpoint-circle-algorithm.error
zig build: exit status 1
/tmp/bitmap-midpoint-circle-algorithm.zig:15:9: error: local variable shadows declaration of 'g'
/tmp/bitmap-midpoint-circle-algorithm.zig:12:1: note: declared here
/tmp/bitmap-midpoint-circle-algorithm.zig:30:8: error: function parameter shadows declaration of 'g'
/tmp/bitmap-midpoint-circle-algorithm.zig:12:1: note: declared here
/tmp/bitmap-midpoint-circle-algorithm.zig:38:9: error: local variable shadows declaration of 'g'
/tmp/bitmap-midpoint-circle-algorithm.zig:12:1: note: declared here
